# ai_style_checker

./: .gitignore  CHANGELOG.md  README.md  __main__.py  cli.py  fingerprint.json  pyproject.toml  report.py
.github/workflows/: ci.yml
checkers/: __init__.py  ai_patterns.py  base.py  burstiness.py  claims.py  entropy.py  fingerprint.py  hedging.py  passive_voice.py  readability.py  repetition.py  sentence_openers.py  structure.py  vocabulary.py
sample/: ai_generated.md  human_written.md
tests/: test_checkers.py
