[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-style-checker"
version = "0.1.0"
description = "Detect AI-generated writing patterns in academic manuscripts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Kyeong Sun Kim", email = "ksk54299@gmail.com" },
]
keywords = [
    "ai-detection",
    "academic-writing",
    "style-checker",
    "manuscript",
    "plagiarism",
    "hallucination",
    "scientific-writing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/ksk5429/ai_style_checker"
Repository = "https://github.com/ksk5429/ai_style_checker"
Issues = "https://github.com/ksk5429/ai_style_checker/issues"

[project.scripts]
ai-style-checker = "cli:main"

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
    "textstat>=0.7",
    "proselint>=0.14",
    "lexicalrichness>=0.5",
]
deep = [
    "transformers>=4.30",
    "torch>=2.0",
    "sentence-transformers>=2.2",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "black>=23.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
